--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:1034750484450:ios:7628d3187eb2b69a26e3bb",
-  "FIREBASE_PROJECT_ID": "scipro-362508",
-  "GCM_SENDER_ID": "1034750484450"
+  "GOOGLE_APP_ID": "1:974571096401:ios:4cd8d19c2292300a9a6b70",
+  "FIREBASE_PROJECT_ID": "leptonscipro-31792",
+  "GCM_SENDER_ID": "974571096401"
 }
