--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.1.0
   google_fonts: ^3.0.1
   flutter_bloc: ^8.1.1
+  flutter_staggered_animations: ^1.1.1
   intl: ^0.17.0
   printing: ^5.9.3
   line_icons: ^2.0.1
