--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   image_picker: ^0.8.6
   http: ^0.13.5
   url_launcher: ^6.1.5
+  flutter_windowmanager: ^0.2.0
 flutter_icons:
   android: true
   ios: true
